Text align fix

--- a/src/widgets/styles/NestedDetailBlock.css
+++ b/src/widgets/styles/NestedDetailBlock.css
@@ -18,6 +18,7 @@
     font-size: 1.7vw;
     line-height: 2.4vw;
     color: var(--text-headers-blue);
+    text-align: left;
 }
 
 .nestedDetailContent {
